--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
                     cpus: '0.50'
                     memory: 1G
         networks:
-            - hoya-network
+            - magento-network
 
     elasticsearch_717:
         container_name: "elasticsearch_717"
@@ -47,7 +47,7 @@ services:
                     cpus: '0.50'
                     memory: 1G
         networks:
-            - hoya-network
+            - magento-network
 
     mysql_80:
         container_name: "mysql_80"
@@ -69,7 +69,7 @@ services:
             - ./volumes/mysql/8.0:/var/lib/mysql
             - ./code/misc/:/var/temp/
         networks:
-            - hoya-network
+            - magento-network
 
     php_74:
         container_name: "php_74"
@@ -82,7 +82,7 @@ services:
         volumes:
             - ./code:/var/www/html
         networks:
-            - hoya-network
+            - magento-network
 
     php_82:
         container_name: "php_82"
@@ -95,7 +95,7 @@ services:
         volumes:
             - ./code:/var/www/html
         networks:
-            - hoya-network
+            - magento-network
 
     nginx:
         container_name: "nginx"
@@ -110,7 +110,7 @@ services:
             - ./config/nginx-virtual-hosts.conf:/etc/nginx/conf.d/default.conf
             - ./config/magento-virtual-host.conf:/tmp/nginx.conf
         networks:
-            - hoya-network
+            - magento-network
         links:
             - php_74
             - php_82
@@ -119,7 +119,7 @@ services:
             - mysql_80
 
 networks:
-    hoya-network:
+    magento-network:
         driver: bridge
         enable_ipv6: false
 
