--- a/config/nginx-virtual-hosts.conf
+++ b/config/nginx-virtual-hosts.conf
@@ -38,20 +38,20 @@ server {
 }
 
 
-server {
-    listen 80;
-
-    ### Change `hoya-docker.local` to your domain name
-    ### Use `php_82` for PHP 8.2 and PHP_74 for PHP 7.4
-    ### Change `hoya-docker` to your Magento 2 codebase directory
-    server_name hoya-halp-old.local;
-    set $FASTCGI_PASS php_74:9000;
-    set $MAGE_ROOT /var/www/html/halp-old;
-
-    set $MAGE_MODE developer;
-
-    access_log /var/log/nginx/magento-access.log;
-    error_log /var/log/nginx/magento-error.log;
-
-    include /tmp/nginx.conf;
-}
+# server {
+#     listen 80;
+#
+#     ### Change `hoya-docker.local` to your domain name
+#     ### Use `php_82` for PHP 8.2 and PHP_74 for PHP 7.4
+#     ### Change `hoya-docker` to your Magento 2 codebase directory
+#     server_name hoya-halp-old.local;
+#     set $FASTCGI_PASS php_74:9000;
+#     set $MAGE_ROOT /var/www/html/halp-old;
+#
+#     set $MAGE_MODE developer;
+#
+#     access_log /var/log/nginx/magento-access.log;
+#     error_log /var/log/nginx/magento-error.log;
+#
+#     include /tmp/nginx.conf;
+# }
