--- a/images/nginx/Dockerfile
+++ b/images/nginx/Dockerfile
@@ -2,6 +2,7 @@ FROM nginx:latest
 
 WORKDIR /var/www/html
 
+RUN mkdir -p /var/www/html/adminer
 RUN apt-get update
 RUN apt-get install curl telnet nano -y
 
