--- a/images/nginx/conf/adminer-vhost.conf
+++ b/images/nginx/conf/adminer-vhost.conf
@@ -1,16 +1,16 @@
 server {
     listen 80;
     server_name adminer.local;
-    index index.php index.html index.htm;
+    index index.php;
 
     access_log /var/log/nginx/magento-access.log;
     error_log /var/log/nginx/magento-error.log;
 
-    root /var/www/html/adminer;
+    root /var/www/adminer;
 
     location ~ \.php$ {
         fastcgi_index index.php;
-        fastcgi_pass   php_82:9000;
+        fastcgi_pass   php_74;
         fastcgi_param  PHP_FLAG  "session.auto_start=off \n suhosin.session.cryptua=off";
         fastcgi_param  PHP_VALUE "memory_limit=1024M \n max_execution_time=18000";
         fastcgi_read_timeout 600s;
