--- a/images/nginx/conf/adminer-vhost.conf
+++ b/images/nginx/conf/adminer-vhost.conf
@@ -6,7 +6,7 @@ server {
     access_log /var/log/nginx/magento-access.log;
     error_log /var/log/nginx/magento-error.log;
 
-    root /var/www/adminer;
+    root /adminer;
 
     location ~ \.php$ {
         fastcgi_index index.php;
