--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,9 +55,9 @@ services:
         restart: unless-stopped
         environment:
             MYSQL_DATABASE: 'main'
-            MYSQL_USER: 'magento'
-            MYSQL_PASSWORD: 'magento'
-            MYSQL_ROOT_PASSWORD: 'magento'
+            MYSQL_USER: "${MYSQL_USER}"
+            MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
+            MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
         ports:
             - "43306:3306"
         deploy:
@@ -79,7 +79,7 @@ services:
         ports:
             - "49000:9000"
         volumes:
-            - "${DOCUMENT_ROOT}:/var/www/html"
+            - "${DOCUMENT_ROOT}:/app"
             - ./code/adminer:/var/www/adminer
         networks:
             - magento-network
@@ -93,7 +93,7 @@ services:
         ports:
             - "49001:9000"
         volumes:
-            - "${DOCUMENT_ROOT}:/var/www/html"
+            - "${DOCUMENT_ROOT}:/app"
             - ./code/adminer:/var/www/adminer
         networks:
             - magento-network
@@ -108,7 +108,7 @@ services:
             - "80:80"
         volumes:
             - ./code/adminer:/var/www/adminer
-            - "${DOCUMENT_ROOT}:/var/www/html"
+            - "${DOCUMENT_ROOT}:/app"
             - "${DOCUMENT_ROOT}/nginx/virtual-hosts:/etc/nginx/magento/virtual-hosts"
             - "${DOCUMENT_ROOT}/nginx/magento-config:/etc/nginx/magento/magento-config"
         networks:
