--- a/images/nginx/conf/adminer-vhost.conf
+++ b/images/nginx/conf/adminer-vhost.conf
@@ -21,3 +21,33 @@ server {
         fastcgi_buffer_size 32k;
     }
 }
+
+server {
+
+    listen 443 ssl;
+
+    server_name adminer.local;
+
+    ssl_certificate /etc/nginx/certs/local.crt;
+    ssl_certificate_key /etc/nginx/certs/local.key;
+
+    index index.php;
+
+    access_log /var/log/nginx/magento-access.log;
+    error_log /var/log/nginx/magento-error.log;
+
+    root /adminer;
+
+    location ~ \.php$ {
+        fastcgi_index index.php;
+        fastcgi_pass   php_74;
+        fastcgi_param  PHP_FLAG  "session.auto_start=off \n suhosin.session.cryptua=off";
+        fastcgi_param  PHP_VALUE "memory_limit=1024M \n max_execution_time=18000";
+        fastcgi_read_timeout 600s;
+        fastcgi_connect_timeout 600s;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+    }
+}
